<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.b3dgs</groupId>
        <artifactId>b3dgs-parent</artifactId>
        <version>2.0.0-SNAPSHOT</version>
    </parent>
    <groupId>com.b3dgs.lionengine</groupId>
    <artifactId>lionengine</artifactId>
    <version>10.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>LionEngine</name>
    <description>Java 2D Game Engine</description>
    <url>https://github.com/b3dgs/lionengine</url>
    <modules>
        <module>java/lionengine-core</module>
    </modules>
    <scm>
        <url>https://github.com/b3dgs/lionengine</url>
        <connection>scm:git:git@github.com:b3dgs/lionengine.git</connection>
        <developerConnection>scm:git:git@github.com:b3dgs/lionengine.git</developerConnection>
        <tag>HEAD</tag>
    </scm>
    <properties>
        <radial.base-package>com.b3dgs.lionengine</radial.base-package>
    </properties>
    <repositories>
        <repository>
            <id>snapshots</id>
            <url>https://central.sonatype.com/repository/maven-snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>
    <build>
        <plugins>
            <plugin>
                <groupId>com.b3dgs.radialencapsulation</groupId>
                <artifactId>radial-encapsulation-maven-plugin</artifactId>
                <configuration>
                    <maxViolations>2</maxViolations> <!-- TODO To be removed -->
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>core</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <modules>
                <module>java/lionengine-core-headless</module>
                <module>java/lionengine-core-awt</module>
                <module>java/lionengine-game</module>
                <module>java/lionengine-helper</module>
                <module>java/lionengine-audio-wav</module>
                <module>java/lionengine-audio-adlmidi</module>
                <module>java/lionengine-audio-adplug</module>
                <module>java/lionengine-audio-sc68</module>
                <module>coverage</module>
            </modules>
        </profile>
        <profile>
            <id>android</id>
            <properties>
                <jdk.version>17</jdk.version>
                <maven.source.skip>true</maven.source.skip>
                <maven.javadoc.skip>true</maven.javadoc.skip>
                <maven.test.skip>true</maven.test.skip>
            </properties>
        </profile>
        <profile>
            <id>editor</id>
            <properties>
                <jdk.version>17</jdk.version>
                <maven.source.skip>true</maven.source.skip>
                <maven.javadoc.skip>true</maven.javadoc.skip>
            </properties>
            <modules>
                <module>java/lionengine-game</module>
                <module>java/lionengine-helper</module>
                <module>releng/aggregator</module>
                <module>coverage</module>
            </modules>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <skipTests>true</skipTests>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <configuration>
                            <skipTests>true</skipTests>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>extra</id>
            <modules>
                <module>java/lionengine-examples</module>
                <module>java/lionengine-tutorials</module>
            </modules>
        </profile>
        <profile>
            <id>sonar</id>
            <modules>
                <module>java/lionengine-core-headless</module>
                <module>java/lionengine-core-awt</module>
                <module>java/lionengine-game</module>
                <module>java/lionengine-helper</module>
                <module>java/lionengine-audio-wav</module>
                <module>java/lionengine-audio-adlmidi</module>
                <module>java/lionengine-audio-adplug</module>
                <module>java/lionengine-audio-sc68</module>
                <module>releng/aggregator</module>
            </modules>
        </profile>
    </profiles>
</project>
